Task#287_Refactor Driver Controller
