# src/main/java/elektroGo/back/controller/DriverController.java
@@ -12,6 +12,7 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import elektroGo.back.data.finders.FinderDriver;
 import elektroGo.back.data.finders.FinderUser;
 import elektroGo.back.data.gateways.GatewayDriver;
+import elektroGo.back.exceptions.DriverAlreadyExists;
 import elektroGo.back.exceptions.DriverNotFound;
 import elektroGo.back.exceptions.UserAlreadyExists;
 import elektroGo.back.exceptions.UserNotFound;
@@ -25,31 +26,17 @@ import java.util.ArrayList;
 /**
  * @brief La classe DriverController es la classe que comunicarà front-end i back-end alhora de tractar amb dades dels Drivers
  */
+@RequestMapping("/drivers")
 @RestController
 public class DriverController {
 
     private final CustomLogger logger = CustomLogger.getInstance();
 
     /**
-     * @brief Funció amb metode 'GET' que retorna la informació del driver amb el username corresponen
-     * @param userName Usuari del que volem agafar la info
-     * @return Es retorna un String amb la info del usuari demanada
-     */
-    @GetMapping("/driver")
-    public String getDriver(@RequestParam String userName) throws SQLException {
-        logger.log("Starting getDriver method with username '" + userName + "'...", logType.TRACE);
-        FinderDriver fU = FinderDriver.getInstance();
-        GatewayDriver gD = fU.findByUserName(userName);
-        if(gD == null)throw new DriverNotFound(userName);
-        logger.log("Returning this driver:  " + gD.json() + " end of method", logType.TRACE);
-        return gD.json();
-    }
-
-    /**
      * @brief Funció amb metode 'GET' que retorna la informació de tots els Drivers a la BD
      * @return Es retorna un String amb la info dels usuaris
      */
-    @GetMapping("/drivers")
+    @GetMapping("")
     public String getDrivers() throws SQLException, JsonProcessingException {
         FinderDriver fU = FinderDriver.getInstance();
         ArrayList<GatewayDriver> lU = fU.findAll();
@@ -58,35 +45,53 @@ public class DriverController {
     }
 
     /**
+     * @brief Funció amb metode 'GET' que retorna la informació del driver amb el username corresponen
+     * @param username Usuari del que volem agafar la info
+     * @return Es retorna un String amb la info del usuari demanada
+     */
+    @GetMapping("/{username}")
+    public String getDriver(@PathVariable String username) throws SQLException {
+        logger.log("Starting getDriver method with username '" + username + "'...", logType.TRACE);
+        FinderDriver fU = FinderDriver.getInstance();
+        GatewayDriver gD = fU.findByUserName(username);
+        if(gD == null)throw new DriverNotFound(username);
+        logger.log("Returning this driver:  " + gD.json() + " end of method", logType.TRACE);
+        return gD.json();
+    }
+
+    /**
      * @brief Funció amb metode 'POST' que crearà un Driver amb la info requerida
-     * @param gD GatewayDriver amb tota la informació necessaria
+     * @param username Username de l'usuari que es vol solicitar convertir en Driver
      * @post S'afegeix l'usuari a la BD
      */
-    @PostMapping("/drivers/create")
-    public void createDriver(@RequestBody GatewayDriver gD) throws SQLException {
-        logger.log("\nStarting createDriver method with username " + gD.getUsername() + " ...", logType.TRACE);
+    @PostMapping("/{username}")
+    public void createDriver(@PathVariable String username) throws SQLException {
+        logger.log("\nStarting createDriver method with username " + username + " ...", logType.TRACE);
         FinderUser fU = FinderUser.getInstance();
-        if (fU.findByUsername(gD.getUsername()) == null) throw new UserNotFound(gD.getUsername());
+        if (fU.findByUsername(username) == null) throw new UserNotFound(username);
         FinderDriver fD = FinderDriver.getInstance();
-        if (fD.findByUserName(gD.getUsername()) != null) throw new UserAlreadyExists(gD.getUsername());
+        if (fD.findByUserName(username) != null) throw new DriverAlreadyExists(username);
+        GatewayDriver gD = new GatewayDriver(username);
         gD.insert();
         logger.log("Driver inserted (End of method)", logType.TRACE);
     }
 
     /**
      * @brief Funció amb metode 'POST' que demana que s'esborri un Driver de la BD
-     * @param userName Usuari que volem eliminar
+     * @param username Usuari que volem eliminar
      * @post El usuari s'elimina de la BD
      */
-    @PostMapping("/drivers/delete")
-    public void deleteDriver(@RequestParam String userName) {
+    @DeleteMapping("/{username}")
+    public void deleteDriver(@PathVariable String username) {
         FinderDriver fD = FinderDriver.getInstance();
         try {
-            GatewayDriver gD = fD.findByUserName(userName);
+            GatewayDriver gD = fD.findByUserName(username);
             if (gD != null) gD.remove();
-            else throw new DriverNotFound(userName);
+            else throw new DriverNotFound(username);
         } catch (SQLException e) {
             e.printStackTrace();
         }
     }
+
+    // TODO put /verify
 }
